magnets translations. Solved wording inconsistencies - "Directorio/Carpeta" -> Now "Carpetas"

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -83,7 +83,7 @@ GENERAL_BROWSE_HOST_LABEL=Explorar computadora central
 #### GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
 GENERAL_BROWSE_HOST_TIP=Ver todos los archivos de la computadora seleccionada.
 #### GENERAL_ADVANCED_SUB_MENU=Advanced
-#? GENERAL_ADVANCED_SUB_MENU=
+GENERAL_ADVANCED_SUB_MENU=Avanzado
 
 ################################################################################
 # Keys/value pairs for right-click context menus.
@@ -694,7 +694,7 @@ MAGNET_COPY_MAGNET_LINKS_LABEL=Copiar Enlaces Magnet al Portapapeles
 #### MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the Selected Files to the Clipboard
 MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copiar los Enlaces Magnet de los archivos seleccionados al Portapapeles
 #### MAGNET_COPY_MAGNET_LINKS_WARNING=One or more of the created magnet links may not be accessible since their hosts are firewalled.
-#? MAGNET_COPY_MAGNET_LINKS_WARNING=
+MAGNET_COPY_MAGNET_LINKS_WARNING=Puede ser que uno o más de los Enlaces Magnets creados no sean accesibles dado que sus Computadores Centrales tienen CortaFuegos.
 
 ################################################################################
 # Search actions
@@ -704,7 +704,7 @@ MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copiar los Enlaces Magnet de los archivos selec
 SEARCH_FOR_KEYWORDS_ACTION_NAME=Buscar por Palabras Clave: {0}
 # {0} the title of the search
 #### SEARCH_ACTION_NAME=Search for: {0}
-#? SEARCH_ACTION_NAME=
+SEARCH_ACTION_NAME=Buscar for: {0}
 # {0} the already translated mediatype
 #### SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
 SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Buscar "Que hay de nuevo?" por: {0}
@@ -901,7 +901,7 @@ DOWNLOADER_DIALOG_WARNING_LABEL=Advertencia: {0}
 #### DOWNLOADER_DIALOG_NOTE_LABEL=<b>Note</b>: A file with the same content already exists in the library at {0}
 DOWNLOADER_DIALOG_NOTE_LABEL=<b>Nota</b>: Un archivo con el mismo contenido ya existe en la Biblioteca en {0}
 #### NO_FILENAME_LABEL=No Filename
-#? NO_FILENAME_LABEL=
+NO_FILENAME_LABEL=Sin nombre de archivo
 
 ################################################################################
 # Key/value pair for download location dialog
@@ -909,7 +909,7 @@ DOWNLOADER_DIALOG_NOTE_LABEL=<b>Nota</b>: Un archivo con el mismo contenido ya e
 #### DOWNLOAD_LOCATION_DIALOG_TITLE=Choose Save Location
 DOWNLOAD_LOCATION_DIALOG_TITLE=Seleccione Ubicación para Guardar
 #### DIRECTORY_CHOOSER_FILE_DESCRIPTION=All Folders
-#? DIRECTORY_CHOOSER_FILE_DESCRIPTION=
+DIRECTORY_CHOOSER_FILE_DESCRIPTION=Todas las Carpetas
 
 ################################################################################
 # Key/value pair for save location error states
@@ -995,9 +995,9 @@ SHARE_NEW_FOLDER_ACTION_NAME=Compartir Nueva Carpeta...
 #### SHARE_NEW_FOLDER_ACTION_MNEMONIC=R
 SHARE_NEW_FOLDER_ACTION_MNEMONIC=R
 #### SHARE_FILE_FAILED=LimeWire was unable to share the file "{0}".
-#? SHARE_FILE_FAILED=
+SHARE_FILE_FAILED=LimeWire no pudo compartir el archivo "{0}".
 #### SHARE_FILE_ALREADY_SHARED=The file "{0}" is already shared.
-#? SHARE_FILE_ALREADY_SHARED=
+SHARE_FILE_ALREADY_SHARED=El archivo "{0}" ya habia sido compartido.
 
 ################################################################################
 # Key/value pairs for Statistics String...
@@ -1155,7 +1155,7 @@ DOWNLOAD_SEARCHING=Ubicando fuentes....
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
 DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Disculpe, pero LimeWire no pudo reiniciar sus descargas anteriores.
 #### DOWNLOAD_MAGNET_DIALOG_MESSAGE=Would you like to start downloads from the following magnets?
-#? DOWNLOAD_MAGNET_DIALOG_MESSAGE=
+DOWNLOAD_MAGNET_DIALOG_MESSAGE=¿Desea iniciar descargas desde los siguientes Enlaces Magnet?
 #### DOWNLOAD_HASH_ONLY_MAGNET=LimeWire may not be able to start the download you have selected unless you start a search for it.
 DOWNLOAD_HASH_ONLY_MAGNET=LimeWire no será capaz de iniciar la descarga que ha seleccionado hasta que inicie una búsqueda al respecto.
 #### DOWNLOAD_PRIORITY_ACTIVE=Active
@@ -1521,7 +1521,7 @@ FILE_CHOOSER_DIRECTORY_TITLE=Seleccionar directorio
 # limewire.props is not present or when the "INSTALLED" setting is false
 ################################################################################
 #### INIT_SAVE_DIRECTORY_FIELD_LABEL=Folder:
-INIT_SAVE_DIRECTORY_FIELD_LABEL=Directorio:
+INIT_SAVE_DIRECTORY_FIELD_LABEL=Carpeta:
 #### INIT_SAVE_BROWSE_BUTTON_LABEL=Browse...
 INIT_SAVE_BROWSE_BUTTON_LABEL=Explorar...
 #### INIT_SAVE_BROWSE_BUTTON_TIP=Choose Another Folder
@@ -1922,13 +1922,13 @@ MESSAGE_CAPTION=Mensaje
 #### MESSAGE_ERROR_CAPTION=Error
 MESSAGE_ERROR_CAPTION=Error
 #### MESSAGE_WARNING_CAPTION=Warning
-#? MESSAGE_WARNING_CAPTION=
+MESSAGE_WARNING_CAPTION=Advertencia
 #### MESSAGE_SHARE_SAVE_DIR=Would you like to add the save folder to your list of shared folders? Subfolders of this folder will also be shared.
 MESSAGE_SHARE_SAVE_DIR=¿Desea agregar el directorio guardado a su lista de directorios compartidos? También se compartirán los subdirectorios de este directorio.
 #### MESSAGE_CONFIRM_UNSHARE_DIRECTORY=Are you sure you want to stop sharing this folder?
 MESSAGE_CONFIRM_UNSHARE_DIRECTORY=¿Está seguro que desea dejar de compartir este directorio?
 #### MESSAGE_CANNOT_UNSHARE_DIRECTORY=LimeWire cannot stop sharing this folder.
-#? MESSAGE_CANNOT_UNSHARE_DIRECTORY=
+MESSAGE_CANNOT_UNSHARE_DIRECTORY=LimeWire no puede dejar de compartir esta carpeta.
 #### MESSAGE_OVERWRITE_EXISTING_FILE=Overwrite existing file
 MESSAGE_OVERWRITE_EXISTING_FILE=Sobreescribir archivo existente
 #### MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire will not launch the specified file for security reasons.
@@ -2079,13 +2079,13 @@ ERROR_NETWORK_FLOODING=Es posible que esta búsqueda arroje muchos resultados y d
 #### ERROR_BROWSE_FAILED=Could not browse files on the requested host. This machine is probably not accepting more incoming connections.
 ERROR_BROWSE_FAILED=No se pudieron buscar los archivos en la computadora central especificada. Dicha máquina probablemente no acepte más conexiones entrantes.
 #### ERROR_INVALID_SAVE_DIRECTORY=Invalid folder for saving files. Please use another folder or revert to the default.
-ERROR_INVALID_SAVE_DIRECTORY=Directorio inválido para guardar archivos. Por favor, utilice otro directorio o vuelva al predeterminado.
+ERROR_INVALID_SAVE_DIRECTORY=Carpeta inválida para guardar archivos. Por favor, utilice otro directorio o vuelva al predeterminado.
 #### ERROR_INVALID_SAVE_DIRECTORY_WINDOW=Your save folder is not valid. It may have been deleted, you may not have permissions to write to it, or there may be another problem. Please choose a different folder.
 ERROR_INVALID_SAVE_DIRECTORY_WINDOW=Su directorio para guardar no es válido. Es posible que haya sido eliminado, que no tenga permiso para escribir en él o que haya otro problema. Por favor, elija otro directorio.
 #### ERROR_INVALID_SAVE_DIRECTORY_SELECTION=The selected save folder is invalid. You may not have permissions to write to the selected folder. LimeWire will revert to your previously selected folder.
 ERROR_INVALID_SAVE_DIRECTORY_SELECTION=El directorio para guardar seleccionado no es válido. Es posible que no tenga permiso para escribir en el directorio seleccionado. LimeWire volverá al directorio seleccionado previamente.
 #### ERROR_INVALID_SHARED_DIRECTORY=Invalid folder for sharing files. Please use another folder or revert to the default.
-ERROR_INVALID_SHARED_DIRECTORY=Directorio inválido para compartir archivos. Por favor, utilice otro directorio o vuelva al predeterminado.
+ERROR_INVALID_SHARED_DIRECTORY=Carpeta inválida para compartir archivos. Por favor, utilice otro directorio o vuelva al predeterminado.
 #### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 when manually forcing your port.
 ERROR_FORCE_IP_PORT_RANGE=Ingrese un puerto entre 1 y 65535 para canalizar su dirección IP.
 #### ERROR_CONNECT_STRING=Connect strings must be at least length 1, contain one space, and may not contain 'GIV', 'GET', or any other HTTP keywords.
@@ -2331,11 +2331,11 @@ OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=País
 #### OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings. Would you like to save these changes?
 OPTIONS_SAVE_ON_CLOSE=Ha hecho cambios a algunas configuraciones. ¿Desea guardar estos cambios?
 #### OPTIONS_SAVE_DIR_TITLE=Save Folder
-OPTIONS_SAVE_DIR_TITLE=Directorio guardar
+OPTIONS_SAVE_DIR_TITLE=Guardar Carpeta
 #### OPTIONS_SAVE_DIR_LABEL=You can choose the folder for saving files.
 OPTIONS_SAVE_DIR_LABEL=Puede elegir el directorio para guardar archivos.
 #### OPTIONS_SAVE_DIR_BOX_LABEL=Folder:
-OPTIONS_SAVE_DIR_BOX_LABEL=Directorio:
+OPTIONS_SAVE_DIR_BOX_LABEL=Carpeta:
 #### OPTIONS_SAVE_DIR_BROWSE_BUTTON_LABEL=Browse...
 OPTIONS_SAVE_DIR_BROWSE_BUTTON_LABEL=Explorar...
 #### OPTIONS_SAVE_DIR_DEFAULT_BUTTON_LABEL=Use Default
@@ -2355,7 +2355,7 @@ OPTIONS_SAVE_RESET_BUTTON_TIP=Reiniciar a Carpeta de Descarga por Defecto
 #### OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_LABEL=Browse...
 OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_LABEL=Examinar...
 #### OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_TIP=Choose Another Folder
-OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_TIP=Eliga otra Carpeta
+OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_TIP=Elija otra Carpeta
 #### OPTIONS_SAVE_MEDIATYPE=Media Type
 OPTIONS_SAVE_MEDIATYPE=Tipo de Archivo
 #### OPTIONS_SAVE_DIRECTORY=Save Folder
@@ -2373,11 +2373,11 @@ OPTIONS_PURGE_INCOMPLETE_TIME_NUMBER_LABEL=Conservar los archivos incompletos du
 # in the options window
 ################################################################################
 #### OPTIONS_SHARED_DIRS_TITLE=Shared Folders
-OPTIONS_SHARED_DIRS_TITLE=Directorios compartidos
+OPTIONS_SHARED_DIRS_TITLE=Carpetas compartidas
 #### OPTIONS_SHARED_DIRS_LABEL=You can choose the folders for sharing files. Files in these folders are displayed in the library.
 OPTIONS_SHARED_DIRS_LABEL=Puede elegir los directorios para compartir archivos. Los archivos de estos directorios se muestran en la biblioteca.
 #### OPTIONS_SHARED_DIRS_BOX_LABEL=Folders:
-OPTIONS_SHARED_DIRS_BOX_LABEL=Directorios:
+OPTIONS_SHARED_DIRS_BOX_LABEL=Carpetas:
 #### OPTIONS_SHARED_DIRS_BUTTON_LABEL=Add Folder...
 OPTIONS_SHARED_DIRS_BUTTON_LABEL=Agregar directorio...
 #### OPTIONS_SHARED_DIRS_BUTTON_TIP=Add a Folder to Share
@@ -2387,9 +2387,9 @@ OPTIONS_SHARED_SPECIALLY_SHARE_BOX_LABEL=Compartir Descargas Finalizadas:
 #### OPTIONS_SHARED_SHARE_SPECIALLY_TITLE=Download Sharing
 OPTIONS_SHARED_SHARE_SPECIALLY_TITLE=Compartir Descargas
 #### OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=You can share files that you download to unshared folders.
-#? OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=
+OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=Puede compartir archivos que descarga y guarda en carpetas no compartidas.
 #### OPTIONS_SHARED_NEW_SAVE_FOLDERS=Would you like to share your new save folders?  The following new folders will be shared:\n\n
-#? OPTIONS_SHARED_NEW_SAVE_FOLDERS=
+OPTIONS_SHARED_NEW_SAVE_FOLDERS=Le gustaría compartor las nuevas carpetas? Las siguientes carpetas serán compartidas:\n\n
 
 ################################################################################
 # Key/value pairs for the shared extension options window item
