--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1193,6 +1193,7 @@ ERROR_INTERNAL_SERVLET_FAILED=LimeWire was unable to connect to the bug server i
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
+ERROR_INTERNET_IS_BLOCKED=LimeWire was unable to initialize and start.  This is usually due to a firewall program blocking LimeWire's access to the internet or loopback connections on the local machine.  Please allow LimeWire access to the internet and restart LimeWire.
 ERROR_DAAP_LOOPBACK_FAILED=LimeWire was unable to start the Digital Audio Access Protocol (for sharing files in iTunes) because a Microsoft patch is required or a firewall is blocking access. LimeWire can direct you to Microsoft's page with information if you want to use this feature. Click 'Yes' to go to the patch, 'No' to disable this feature, or 'Cancel' to decide later.
 ERROR_DAAP_LOOPBACK_FAILED_NONXP=LimeWire was unable to start the Digital Audio Access Protocol (for sharing files in iTunes) because a firewall is blocking access. To continue using this feature, click 'Yes' and change your firewall allow 'LimeWire.exe' full access to incoming and outgoing connections. To disable this feature, click 'No'.
 ERROR_DAAP_START_FAILED=LimeWire was unable to start the Digital Audio Access Protocol Service (for sharing files in iTunes). This feature will be turned off. You can turn it back on in options, under iTunes -> Sharing.
