UI fixes to Library awkwardness. (1)  Display folders in Library table, and color based on sharing.  Double-clicking on folders will open it in the LibraryTree if shared, explores it if not shared.  Added new "Share Folder", "Stop Sharing Folder" actions to right-click menu possibilities, and adjusted right-click menu action enabling/disabling for folder selection and folder-and-file selection. (2)  Do not add folder to DIRECTORIES_TO_SHARE when re-sharing a folder of a shared sub-folder.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.8.2
+# Messages Bundle for LimeWire 4.9.0
 # Default locale for: English - United States
 # Maintained by the LimeWire project team.
 ################################################################################
@@ -580,6 +580,8 @@ DOWNLOADER_UTILS_ALREADY_IN_LIBRARY=Same File Already In Library
 ################################################################################
 SHARE_FILE_POPUP_MENU_LABEL=Share File
 UNSHARE_FILE_POPUP_MENU_LABEL=Stop Sharing File
+SHARE_FOLDER_POPUP_MENU_LABEL=Share Folder
+UNSHARE_FOLDER_POPUP_MENU_LABEL=Stop Sharing Folder
 SHARE_FILE_ACTION_NAME=Share New File...
 SHARE_FILE_ACTION_APPROVE_LABEL=Share
 SHARE_FILE_ACTION_MNEMONIC=I
@@ -799,6 +801,7 @@ LIBRARY_TABLE_SEARCH_POPUP_MENU=Search
 LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
 LIBRARY_TREE_SHARE_FOLDER_LABEL=Share Folder
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Stop Sharing Folder
+LIBRARY_TABLE_SHARING_SUB_MENU=Sharing
 LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=Add Folder Contents to Playlist
 LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
