- Added "Configure Sharing Options" item to LibraryTree context menu. - Added ConfigureOptionsAction, which can be re-used by Options-displaying code. - Re-used ConfigureOptionsAction in LibraryMediator's display of Sharing Options. - Fixed localization bug in ShareNewFolderAction.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -489,6 +489,8 @@ LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RENAME_BUTTON_LABEL=Rename
 LIBRARY_SHARED_FILES_CONFIGURE_EXPLAIN=You can configure the folders you share in LimeWire's Options.
 LIBRARY_SHARED_FILES_CONFIGURE=Configure...
+LIBRARY_SHARED_FILES_CONFIGURE_MENU=Configure Sharing Options
+
 
 PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Playlist
@@ -586,6 +588,7 @@ SHARE_FILE_ACTION_NAME=Share New File...
 SHARE_FILE_ACTION_APPROVE_LABEL=Share
 SHARE_FILE_ACTION_MNEMONIC=I
 SHARE_NEW_FOLDER_ACTION_NAME=Share New Folder...
+SHARE_NEW_FOLDER_ACTION_DESCRIPTION=Opens a Window and Lets You Choose a New Folder to Share
 SHARE_NEW_FOLDER_ACTION_MNEMONIC=R
 SHARE_FILE_FAILED=LimeWire was unable to share the file "{0}".
 SHARE_FILE_ALREADY_SHARED=The file "{0}" is already shared.
