--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -331,7 +331,7 @@ MENU_HELP_ERROR_ACCESSIBLE=Generate a Popup Error for Testing
 ################################################################################
 # Key/value pairs for status bar components and right-click menu
 ################################################################################
-STATUS_BAR_SHOW_CONNECTION_QUALITY=Show Connection Quality
+STATUS_BAR_SHOW_CONNECTION_QUALITY=Show Connection Quality Text
 STATUS_BAR_SHOW_SHARED_FILES_COUNT=Show Shared Files Count
 STATUS_BAR_SHOW_FIREWALL_STATUS=Show Firewall Status
 STATUS_BAR_SHOW_BANDWIDTH_CONSUMPTION=Show Bandwidth Consumption
@@ -1536,9 +1536,9 @@ OPTIONS_PLAYER_PREFERENCE_LABEL=You can choose to play media with LimeWire or yo
 ################################################################################
 # Key/Value pairs for the status bar options in the options window
 ################################################################################
-OPTIONS_STATUS_BAR_CONNECTION_QUALITY_CHECK_BOX_LABEL=Show Connection Quality Indicator:
+OPTIONS_STATUS_BAR_CONNECTION_QUALITY_CHECK_BOX_LABEL=Show Connection Quality Text Indicator:
 OPTIONS_STATUS_BAR_CONNECTION_QUALITY_TITLE=Connection Quality Indicator
-OPTIONS_STATUS_BAR_CONNECTION_QUALITY_LABEL=You can display your connection quality in the status bar.
+OPTIONS_STATUS_BAR_CONNECTION_QUALITY_LABEL=You can display text explaining your connection quality in the status bar.
 OPTIONS_STATUS_BAR_SHARED_FILES_CHECK_BOX_LABEL=Show Shared Files Indicator:
 OPTIONS_STATUS_BAR_SHARED_FILES_TITLE=Shared Files Indicator
 OPTIONS_STATUS_BAR_SHARED_FILES_LABEL=You can display how many files you are sharing in the status bar.
