- Pop up dialog on the first non-licensed download, asking if the file should be downloaded. - Added new download setting for persisting choice. - Changed MessageService.showYesNoCancelMessage to NOT persist setting value if Cancel selected.  (Was persisting value even if Cancel clicked, [x] in top-right of window clicked, or if Esc was pressed.)

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -695,6 +695,7 @@ DOWNLOAD_PRIORITY_ACTIVE=Active
 DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the Selected Download Closer to Becoming Active
 DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Move the Selected Download Further from Becoming Active
 DOWNLOAD_PRIORITY_PRIORITIZE=Queue
+DOWNLOAD_SHOW_FIRST_DOWNLOAD_WARNING=LimeWire is unable to find a license for this file.  Download anyway?\n\nPlease note: LimeWire cannot monitor or control the content of the Gnutella network.  Please respect your local copyright laws. 
 
 ###################################################################
 # Key/value pairs for UploadView
@@ -1451,7 +1452,7 @@ OPTIONS_DOWNLOAD_MAX_NUMBER_LABEL=Maximum Downloads:
 ################################################################################
 OPTIONS_DOWNLOAD_CLEAR_TITLE=Clear Downloads
 OPTIONS_DOWNLOAD_CLEAR_LABEL=You can choose whether or not to automatically clear downloads that have completed.
-OPTIONS_DOWNLOAD_CLEAR_CHECK_BOX_LABEL=Auto-Clear Completed Downloads:
+OPTIONS_DOWNLOAD_CLEAR_CHECK_BOX_LABEL=Clear Completed Downloads:
 
 ################################################################################
 # Key/Value pairs for the options for setting the bandwidth devoted
