- Tested status bar with StatusLinkHandler showing.  Fixed layout to   be over the empty space, rather than centered (which was too   simplistic).  Should work for updates as well, but needs to be   tested. - Added "LimeWire" or "PRO" to several of the Go PRO link texts.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1106,15 +1106,15 @@ SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
 # support LimeWire through contributions.
 ##################################################################
 SUPPORT_LIMEWIRE_01=For Turbo-Charged searches get LimeWire PRO.
-SUPPORT_LIMEWIRE_02=Click here to support LimeWire's development of open, peer-to-peer networks.
+SUPPORT_LIMEWIRE_02=Support LimeWire's peer-to-peer development.  Get PRO.
 SUPPORT_LIMEWIRE_03=Purchase LimeWire PRO to help us make downloads faster.
 SUPPORT_LIMEWIRE_04=For Turbo-Charged downloads get LimeWire PRO.
-SUPPORT_LIMEWIRE_05=Support open networks.
-SUPPORT_LIMEWIRE_06=Click here to support open source and open protocols.
-SUPPORT_LIMEWIRE_07=For Turbo-Charged Performance get LimeWire PRO.
-SUPPORT_LIMEWIRE_08=Keep the Internet open. Get LimeWire PRO.
-SUPPORT_LIMEWIRE_09=Developing LimeWire costs real money. Get PRO.
-SUPPORT_LIMEWIRE_11=Help support sharing of independent media content.
+SUPPORT_LIMEWIRE_05=Support open networks.  Get LimeWire PRO.
+SUPPORT_LIMEWIRE_06=Support open source and open protocols.  Get LimeWire PRO.
+SUPPORT_LIMEWIRE_07=For Turbo-Charged performance get LimeWire PRO.
+SUPPORT_LIMEWIRE_08=Keep the Internet open.  Get LimeWire PRO.
+SUPPORT_LIMEWIRE_09=Developing LimeWire costs real money.  Get PRO.
+SUPPORT_LIMEWIRE_11=Support LimeWire and independent media content.  Get PRO.
 
 ################################################################################
 # Key/value pairs for the update package, displayed when there is an
