- Moved license warning option pane item to Searching > Limit pane, and renamed that pane to "Basic". - Moved license warning setting to QuestionsHandler, so that it will be reverted with the "Revert All Popups" command. - Added Roger's new paintComponent method for the shared files indicator. - Fixed ^Ms in the new pane item. - Fixed applyOptions logic in the new pane item.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1340,7 +1340,7 @@ OPTIONS_AUTOCOMPLETE_MAIN_TITLE=Autocompletion
 OPTIONS_THEME_MAIN_TITLE=Skin
 OPTIONS_SKIN_MAIN_TITLE=Skin
 OPTIONS_SEARCH_MAIN_TITLE=Searching
-OPTIONS_SEARCH_LIMIT_MAIN_TITLE=Limit
+OPTIONS_SEARCH_LIMIT_MAIN_TITLE=Basic
 OPTIONS_SEARCH_QUALITY_MAIN_TITLE=Quality
 OPTIONS_SEARCH_SPEED_MAIN_TITLE=Speed
 OPTIONS_FILTERS_MAIN_TITLE=Filters
@@ -1612,7 +1612,7 @@ OPTIONS_AUDIO_PLAYER_BOX_LABEL=Audio Player
 # Key/value pairs for asking whether or not to display message bug reports
 ################################################################################
 OPTIONS_BUGS_TITLE=Bug Reports
-OPTIONS_BUGS_LABEL=You can choose how bug reports should be sent. To view an example bug report, click 'View Example'. Choosing 'Always Send Immediately' will immediately contact the bug server when LimeWire encounters an internal error. Choosing 'Always Ask for Review' will tell LimeWire to ask for your approval before sending a bug to the bug server. Choosing 'Always Discard Bugs' will cause LimeWire to ignore all bugs (this is not recommended).
+OPTIONS_BUGS_LABEL=You can choose how bug reports should be sent. To view an example bug report, click 'View Example'. Choosing 'Always Send Immediately' will immediately contact the bug server when LimeWire encounters an internal error. Choosing 'Always Ask for Review' will tell LimeWire to ask for your approval before sending a bug to the bug server. Choosing 'Always Discard All Errors' will cause LimeWire to ignore all bugs (this is not recommended).
 OPTIONS_BUGS_VIEW_EXAMPLE=View Example
 
 ################################################################################
