the dialog asking the user whether to restart now, later or cancel.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1111,6 +1111,11 @@ UPDATE_TITLE=A new version of LimeWire is available.
 UPDATE_LATER_LABEL=Update Later
 UPDATE_NOW_LABEL=Update Now
 UPDATE_TIP=Visit http://www.limewire.com to update!
+UPDATE_RESTART=LimeWire needs to be restarted to install the new version.  All your downloads will automatically resume after the restart.  Would you like to restart LimeWire now?
+UPDATE_RESTART_TITLE=LimeWire is ready to install new version.
+UPDATE_RESTART_NOW_BUTTON=Yes, Restart
+UPDATE_RESTART_AFTER_TRANSFERS_BUTTON=Restart After Transfers
+UPDATE_RESTART_CANCEL_BUTTON=Cancel Upgrade
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
