- Fixed several of the status bar's rendering problems when there's not enough room for all the components.  Still needs a little work. - Greatly simplified construction of StatusLine using far fewer extra panels.   - Connection meter display is now enableable/disableable.   - Connection meter is now a label, rather than a CardLayout panel with JLabels.   - Connection quality text is no longer present, except for on PRO, when the text shows as part of the connection meter.  (Since there's more room available with PRO.)   - Firewall was placed in front of the number of shared files, since it does not resize.  This mitigates some of the resizing that needs to be done.   - The UpdatePanel is now a label, instead of a label inside a panel.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -332,7 +332,7 @@ MENU_HELP_ERROR_ACCESSIBLE=Generate a Popup Error for Testing
 ################################################################################
 # Key/value pairs for status bar components and right-click menu
 ################################################################################
-STATUS_BAR_SHOW_CONNECTION_QUALITY=Show Connection Quality Text
+STATUS_BAR_SHOW_CONNECTION_QUALITY=Show Connection Quality
 STATUS_BAR_SHOW_SHARED_FILES_COUNT=Show Shared Files Count
 STATUS_BAR_SHOW_FIREWALL_STATUS=Show Firewall Status
 STATUS_BAR_SHOW_BANDWIDTH_CONSUMPTION=Show Bandwidth Consumption
@@ -628,7 +628,7 @@ STATISTICS_CONNECTION_EXCELLENT_TIP=Your connection to the network is very stron
 STATISTICS_CONNECTION_TURBO_CHARGED=Turbo-Charged
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience Turbo-Charged connections all the time with LimeWire PRO!
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Your connection to the network is extremely strong
-STATISTICS_CONNECTION_QUALITY=Connection:
+STATISTICS_CONNECTION_QUALITY=Connection
 STATISTICS_CONNECTION_WAKING_UP=Waking Up
 STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode
 
@@ -1556,9 +1556,9 @@ OPTIONS_PLAYER_PREFERENCE_LABEL=You can choose to play media with LimeWire or yo
 ################################################################################
 # Key/Value pairs for the status bar options in the options window
 ################################################################################
-OPTIONS_STATUS_BAR_CONNECTION_QUALITY_CHECK_BOX_LABEL=Show Connection Quality Text Indicator:
+OPTIONS_STATUS_BAR_CONNECTION_QUALITY_CHECK_BOX_LABEL=Show Connection Quality Indicator:
 OPTIONS_STATUS_BAR_CONNECTION_QUALITY_TITLE=Connection Quality Indicator
-OPTIONS_STATUS_BAR_CONNECTION_QUALITY_LABEL=You can display text explaining your connection quality in the status bar.
+OPTIONS_STATUS_BAR_CONNECTION_QUALITY_LABEL=You can display a measurement of your connection quality in the status bar.
 OPTIONS_STATUS_BAR_SHARED_FILES_CHECK_BOX_LABEL=Show Shared Files Indicator:
 OPTIONS_STATUS_BAR_SHARED_FILES_TITLE=Shared Files Indicator
 OPTIONS_STATUS_BAR_SHARED_FILES_LABEL=You can display how many files you are sharing in the status bar.
