--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -687,6 +687,11 @@ DOWNLOAD_STATUS_SAVING=Saving File...
 DOWNLOAD_STATUS_PAUSING=Pausing...
 DOWNLOAD_STATUS_PAUSED=Paused
 DOWNLOAD_AWAITING_SOURCES=A more specific search may be required...
+# {0} the name of the skin
+# {1} the localized name of the menu item "Refresh Skins"
+# {2} the localized name of the "View" menu
+# {3} the localized name of the "Apply Skins" menu
+DOWNLOAD_EXPLAIN_HOW_TO_CHANGE_THEME=You have downloaded a skin titled "{0}", you can activate the new skin by clicking "{1}" in the "{2}"->"{3}" menu and then selecting it from the list of available skins.
 DOWNLOAD_APPLY_NEW_THEME_START=You have downloaded a new skin titled "
 DOWNLOAD_APPLY_NEW_THEME_END=." Would you like to use this new skin?
 DOWNLOAD_POSSIBLE_HOSTS=Possible Hosts
