--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -422,6 +422,15 @@ SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
 # {1} the keywords fo the search, e.g. name of the album
 SEARCH_XML_FIELD_ACTION_NAME=Search for {0}: {1}
 
+################################################################################
+# CheckBoxList actions
+################################################################################
+CHECK_BOX_LIST_SELECT_ALL_ACTION_NAME=Select All
+CHECK_BOX_LIST_SELECT_ALL_ACTION_TOOLTIP=Marks all Items as Selected
+CHECK_BOX_LIST_DESELECT_ALL_ACTION_NAME=Deselect All
+CHECK_BOX_LIST_DESELECT_ALL_ACTION_TOOLTIP=Deselects all Items in the List
+
+
 #Media Types
 MEDIA_ANY_TYPE=All Types
 MEDIA_DOCUMENTS=Documents
@@ -843,7 +852,9 @@ PLAYLIST_FILE_PARSE_PROBLEM=. The file cannot be parsed.
 # Key/value pairs for the LimeWire initialization wizard that is run
 # if you don't have a limewire.props file
 ################################################################################
+SETUP_DIALOG_TITLE=Limewire Setup Dialog
 SETUP_LANGUAGE_TITLE=Language Options
+SETUP_CHOOSE_LANGUAGE_LABEL=Choose Language: 
 SETUP_LANGUAGE_LABEL=Please choose the language you would like LimeWire to use.
 SETUP_WELCOME_TITLE=Welcome
 SETUP_WELCOME_LABEL=Welcome to the LimeWire setup wizard. LimeWire will guide you through a series of steps to configure LimeWire for optimum performance.
@@ -851,6 +862,7 @@ SETUP_WELCOME_PARTIAL_LABEL=Welcome to the LimeWire setup wizard. LimeWire has r
 SETUP_SAVE_TITLE=Save Folder
 SETUP_SAVE_LABEL=Please choose a folder where you would like your files to be downloaded. This folder will also be shared with other gnutella users by default.
 SETUP_SPEED_TITLE=Connection Speed
+SETUP_SPEED_TITLED_BORDER=Select Speed
 SETUP_SPEED_LABEL=Please choose the speed of your Internet connection. Setting this speed correctly is important for optimum network performance. If you are not sure what type of Internet connection you have, or if your connection type is not listed, simply select whichever one seems the most appropriate.
 SETUP_STARTUP_TITLE=System Startup
 SETUP_STARTUP_LABEL=Would you like LimeWire to start when you log into your computer? This will cause LimeWire to start faster when you use it later.
@@ -861,10 +873,13 @@ SETUP_FIREWALL_TITLE_TWO=Firewall Warning
 SETUP_FIREWALL_LABEL_TWO=LimeWire is now requesting permission to use the network. If nothing appears, LimeWire has succesfully started listening to the network. If your software does pop up a warning, please allow LimeWire full access for best performance. Click 'Next' when finished.
 SETUP_SCAN_TITLE=Scan for Files
 SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which folders you would like to share when the scan is complete.
+SETUP_SCAN_TITLED_BORDER=Scan Hard Drive?
 SETUP_WAIT_TITLE=Scanning Hard Drive
+SETUP_WAIT_PROGRESS_STRING=Scanning Hard Drive...
 SETUP_WAIT_LABEL=Please wait as LimeWire scans your hard drive...
 SETUP_CONFIRM_TITLE=Confirm Scan
 SETUP_CONFIRM_LABEL=We identified the folders below as ones that you might like to share. If you would like to share one of these folders, simply check its associated checkbox. Subfolders of shared folders will also be shared.
+SETUP_CONFIRM_FOLDERS_WILL_BE_SHARED=The selected folders below will be shared recursively.
 SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire was unable to locate any files that may be shared. To continue configuring LimeWire, click "Next".
 SETUP_FINISH_TITLE=Finish Setup
 SETUP_FINISH_LABEL=Your LimeWire setup has successfully completed. Please press the "Finish" button to begin using LimeWire.
@@ -885,7 +900,7 @@ FILE_CHOOSER_DIRECTORY_TITLE=Select Folder
 # com.limegroup.gnutella.gui.init -- the wizard to setup the program when
 # limewire.props is not present or when the "INSTALLED" setting is false
 ################################################################################
-INIT_SAVE_DIRECTORY_FIELD_LABEL=Folder:
+INIT_SAVE_DIRECTORY_FIELD_LABEL=Save Folder:
 INIT_SAVE_BROWSE_BUTTON_LABEL=Browse...
 INIT_SAVE_BROWSE_BUTTON_TIP=Choose Another Folder
 INIT_SAVE_DEFAULT_BUTTON_LABEL=Use Default
