fix broken braces.

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -985,7 +985,7 @@ SAVE_LOCATION_IS_ALREADY_DOWNLOADED_TO_ERROR=Otra descarga ya se está guardando 
 SAVE_LOCATION_ALREADY_SAVED_ERROR=No se pudo asignar una ubicación para el archivo, la descarga ya habia finalizado.
 # {0} the full path name of the folder
 #### SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=Could not save download to the folder {0}, because you do not have write access to it.
-SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=No se pudo guardar la descarga a la carpeta {0], no tiene permiso de escritura en la misma.
+SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=No se pudo guardar la descarga a la carpeta {0}, no tiene permiso de escritura en la misma.
 # {0} the full path name of the folder
 #### SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_ERROR=Could not save download to folder {0}, because the folder does not exist.
 SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_ERROR=No pudo guardar la descarga a la carpeta {0}, la carpeta no existe.
