--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -195,25 +195,25 @@ ABOUT_SCROLL_CHECK_BOX_LABEL=Avanzar automáticamente
 #### ABOUT_BUTTON_TIP=Close This Window
 ABOUT_BUTTON_TIP=Cerrar la ventana Acerca de.
 #### ABOUT_INTRODUCTION=Inspired by LimeWire's owner, Mark Gorton, the LimeWire project is a collaborative <a href="http://www.limewire.org/">open source effort</a> involving programmers and researchers from all over the world.  The collaborative nature of Gnutella is also reflected in the Gnutella Developers Forum (GDF), of which LimeWire is a participant.  The members of the GDF work in the trenches every day to make Gnutella a truly innovative collection of protocols that is constantly improving -- a testament to the power of open protocols and open standards.
-#? ABOUT_INTRODUCTION=
+ABOUT_INTRODUCTION=Inspiradopor el creador de LimeWire, Mark Gorton, el Projecto LimeWire es un esfuerzo colaborativo de <a href="http://www.limewire.org/">Código Abierto</a> que envuelve programadores e investigadores de todas partes del mundo. La naturaleza colaborativa de Gnutella se ver reflajada tambien en el foro de desarrolladores Gnutella (GDF), en el cual LimeWire es un participante. Los miembros del GDF trabajan en las trincheras todos los días para hacer que Gnutella sea una colección innovadora de protocolos que siempre esta en constante mejoramiento -- un testamente del poder de los protocolos abiertos y de los estándares abiertos.
 #### ABOUT_DEV_BLURB=LimeWire is also, of course, the result of the countless hours of work by LimeWire's developers:
-#? ABOUT_DEV_BLURB=
+ABOUT_DEV_BLURB=LimeWire es tambien, por supuesto, el resultado de incontables horas de trabajo del equipo de desarrolladores de LimeWire:
 #### ABOUT_BIZDEV_BLURB=Behind the scenes business strategy and day-to-day affairs are handled by LimeWire's business developers:
-#? ABOUT_BIZDEV_BLURB=
+ABOUT_BIZDEV_BLURB=Detrás de las escenas las estrategias de negociois y los menesteres diarios son manejados por los Desarrolladores de Negocios:
 #### ABOUT_WEBDEV_BLURB=The LimeWire <a href="http://www.limewire.com/">web site</a> and LimeWire graphic design are the hard work of LimeWire's web team: 
-#? ABOUT_WEBDEV_BLURB=
+ABOUT_WEBDEV_BLURB=El <a href="http://www.limewire.com">sitio web</a> de LimeWire, y el diseño grafico de LimeWire son producto del arduo trabajo del equipo web de LimeWire:
 #### ABOUT_SUPPORT_BLURB=LimeWire PRO questions are dutifully answered by LimeWire technical support:
-#? ABOUT_SUPPORT_BLURB=
+ABOUT_SUPPORT_BLURB=Las preguntas de LimeWIre PRO son contestadas de manera diligente por el equipo de soporte técnico de LimeWire:
 #### ABOUT_PREVIOUS_DEV_BLURB=In addition, the following developers have worked on the LimeWire team in the past but have since moved on to other projects:
-#? ABOUT_PREVIOUS_DEV_BLURB=
+ABOUT_PREVIOUS_DEV_BLURB=En adición, los siguientes desarrolladores han trabajado en el equipo de LimeWire en el pasado pero desde ese entonces se han movido a otros proyectos:
 #### ABOUT_CONTRIBUTORS_BLURB=LimeWire open source contributors have provided significant code and many bug fixes, ideas, research, etc. to the project as well.  Those listed below have either written code that is distributed with every version of LimeWire, have identified serious bugs in the code, or both:
-#? ABOUT_CONTRIBUTORS_BLURB=
+ABOUT_CONTRIBUTORS_BLURB=Los contribuyentes de codigo abierto en LimeWire, han provisto código significativo y muchas reparaciones de errores, ideas, investigacion, etc. al proyecto. Las personas listadas a continuación han escrito codigo que ha sido distribuido con cada version de LimeWire, o han indentificado errores serios en el código, o ambas cosas:
 #### ABOUT_I18N_BLURB=LimeWire would also like to thank the many contributors to the internationalization project, both for the application itself and for the LimeWire web site.
-#? ABOUT_I18N_BLURB=
+ABOUT_I18N_BLURB=LimeWire tambien agradece a los muchos contribuyentes del proyecto de internacionalización, tanto para la aplicación como por el sitio web.
 #### ABOUT_COMMUNITY_BLURB=Several colleagues in the Gnutella community merit special thanks.  These include:
-#? ABOUT_COMMUNITY_BLURB=
+ABOUT_COMMUNITY_BLURB=Ciertos colegas en la comunidad Gnutella ameritan agradecimientos especiales. Estos incluyen:
 #### ABOUT_CONCLUSION=Finally, LimeWire would like to extend its sincere thanks to these developers, users, and all others who have contributed their ideas to the project.  Without LimeWire users, the LimeWire network would not exist.
-#? ABOUT_CONCLUSION=
+ABOUT_CONCLUSION=Finalmente, LimeWire le extiende sus sinceros agradecimientos a estos desarrolladores, usuarios y otros que han contribuido con sus ideas al proyecto. Sin los usuarios de LimeWire, la red LimeWire no podría existir.
  
 ###################################################################
 # Key/value pairs for the tip of the day window (not the tips themselves)
@@ -1188,7 +1188,7 @@ DOWNLOAD_AWAITING_SOURCES=Puede necesitarse una búsqueda más específica...
 # {2} the localized name of the "View" menu
 # {3} the localized name of the "Apply Skins" menu
 #### DOWNLOAD_EXPLAIN_HOW_TO_CHANGE_THEME=You have downloaded a skin titled "{0}", you can activate the new skin by clicking "{1}" in the "{2}"->"{3}" menu and then selecting it from the list of available skins.
-#? DOWNLOAD_EXPLAIN_HOW_TO_CHANGE_THEME=
+DOWNLOAD_EXPLAIN_HOW_TO_CHANGE_THEME=Ha descargado una carátula titulada "{0}", puede activar la nueva carátula haciendo click e "{1}" en el menú "{2}"->"{3}" y luego seleccionarla de la lista de carátulas disponibles.
 #### DOWNLOAD_APPLY_NEW_THEME_START=You have downloaded a new skin titled "
 DOWNLOAD_APPLY_NEW_THEME_START=Ha descargado una carátula nueva llamada "
 #### DOWNLOAD_APPLY_NEW_THEME_END=." Would you like to use this new skin?
@@ -1479,9 +1479,9 @@ PLAYLIST_TABLE_BITRATE=Tasa de bits
 #### PLAYLIST_OPTIONS_STRING=Play Options:
 PLAYLIST_OPTIONS_STRING=Opciones de reproducción:
 #### PLAYLIST_OPTIONS_CONTINUE=Continuous
-PLAYLIST_OPTIONS_CONTINUE=Continua
+PLAYLIST_OPTIONS_CONTINUE=Contínua
 #### PLAYLIST_OPTIONS_SHUFFLE=Shuffle
-PLAYLIST_OPTIONS_SHUFFLE=Aleatoria
+PLAYLIST_OPTIONS_SHUFFLE=Aleatória
 #### PLAYLIST_DIALOG_OPEN_TITLE=Open Playlist (.m3u)
 PLAYLIST_DIALOG_OPEN_TITLE=Abrir lista de reproducción (.m3u)
 #### PLAYLIST_DIALOG_SAVE_TITLE=Save Playlist As
@@ -1971,9 +1971,9 @@ UPDATE_NOW_LABEL=Actualizar ahora
 #### UPDATE_TIP=Visit http://www.limewire.com to update!
 UPDATE_TIP=Vistie http://www.limewire.com para actualizar!
 #### UPDATE_RESTART=LimeWire needs to be restarted to install the update.  If you choose not to update now, LimeWire will update automatically when you close.  Would you like to update now?
-#? UPDATE_RESTART=
+UPDATE_RESTART=LimeWire necesita ser reiniciado para instalar la actualización. Si decide no actualizar ahora, LimeWire hara la actualización automaticamente cuando lo cierre. Le gustaría actualizar ahora?
 #### UPDATE_RESTART_TITLE=Update Ready
-#? UPDATE_RESTART_TITLE=
+UPDATE_RESTART_TITLE=Actualización Lista
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
@@ -2542,11 +2542,11 @@ OPTIONS_DOWNLOAD_BANDWIDTH_SLIDER_LABEL_LABEL=Velocidad de descarga:
 # in the options window
 ################################################################################
 #### OPTIONS_DOWNLOAD_LICENSE_WARNING_TITLE=Clear Downloads
-#? OPTIONS_DOWNLOAD_LICENSE_WARNING_TITLE=
+OPTIONS_DOWNLOAD_LICENSE_WARNING_TITLE=Limpiar Descargas
 #### OPTIONS_DOWNLOAD_LICENSE_WARNING_LABEL=You can choose whether to be warned about downloading a file without a license.
-#? OPTIONS_DOWNLOAD_LICENSE_WARNING_LABEL=
+OPTIONS_DOWNLOAD_LICENSE_WARNING_LABEL=Puede elegir si desea advertencias antes de descargar un archivo sin una licencia.
 #### OPTIONS_DOWNLOAD_LICENSE_WARNING_CHECK_BOX_LABEL=Show License Warning:
-#? OPTIONS_DOWNLOAD_LICENSE_WARNING_CHECK_BOX_LABEL=
+OPTIONS_DOWNLOAD_LICENSE_WARNING_CHECK_BOX_LABEL=Mostrar Advertencia de Licencia:
 
 ################################################################################
 # Key/Value pairs for the options for automatically clearing uploads
@@ -4130,7 +4130,7 @@ ERROR_VENDOR_INVALID_PAYLOAD=Carga útil inválida
 #### ERROR_VENDOR_UNRECOGNIZED=Unrecognized Vendor Message
 ERROR_VENDOR_UNRECOGNIZED=Mensaje de proveedor no reconocido
 #### ERROR_STARTUP_WINDOWS_COMPATIBILITY=LimeWire has encountered a problem during startup and cannot proceed.  You may be able to fix this problem by changing LimeWire's Windows Compatibility.  Right-click on the LimeWire icon on your Desktop and select 'Properties' from the popup menu.  Click the 'Compatibility' tab at the top, then click the 'Run this program in compatibility mode for' check box, and then select 'Windows 2000' in the box below the check box.  Then click the 'OK' button at the bottom and restart LimeWire.
-#? ERROR_STARTUP_WINDOWS_COMPATIBILITY=
+ERROR_STARTUP_WINDOWS_COMPATIBILITY=LimeWire ha encontrado un problema durante el arranque y no puede proceder. Puede ser que pueda reparar este problema al cambiar la compatibilidad de LimeWire con Windows. Haga click derecho en el ícono de su escritorio y seleccione 'Propiedades' del menu. Haga click en la pestaña 'Compatibilidad' en la parte superior, luego haga click en la caja 'Ejecutar este programa en modo de compatilidad para', y luego seleccione 'Windows 2000' en la caja inferior. Luego haga click en 'Aceptar' al fondo y reinicie LimeWire.
 
 ###############################################################################
 # Key/value pairs for general message labels
