--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -195,25 +195,25 @@ ABOUT_SCROLL_CHECK_BOX_LABEL=Défilement du texte
 #### ABOUT_BUTTON_TIP=Close This Window
 ABOUT_BUTTON_TIP=Ferme la fenêtre d'à propos.
 #### ABOUT_INTRODUCTION=Inspired by LimeWire's owner, Mark Gorton, the LimeWire project is a collaborative <a href="http://www.limewire.org/">open source effort</a> involving programmers and researchers from all over the world.  The collaborative nature of Gnutella is also reflected in the Gnutella Developers Forum (GDF), of which LimeWire is a participant.  The members of the GDF work in the trenches every day to make Gnutella a truly innovative collection of protocols that is constantly improving -- a testament to the power of open protocols and open standards.
-#? ABOUT_INTRODUCTION=
+ABOUT_INTRODUCTION=Inspiré par le propriétaire de LimeWire, Mark Gorton, le projet LimeWire est le fruit de la collaboration de programmeurs et chercheurs du monde entier engagés ensembles dans un <a href="http://www.limewire.org/">effort de développement ouvert</a>. La nature collaborative de LimeWire se reflète également au sein du Forum des Développeurs Gnutella (GDF), dont LimeWire est un participant. Les membres du GDF travaillent de façon ardue tous les jours pour faire de Gnutella une collection réellement innovative de protocoles en constante progression -- une démonstration effective de la puissance des protocoles et standards ouverts.
 #### ABOUT_DEV_BLURB=LimeWire is also, of course, the result of the countless hours of work by LimeWire's developers:
-#? ABOUT_DEV_BLURB=
+ABOUT_DEV_BLURB=Bien sûr, LimeWire est également le résultat d'heures non comptées de travail par les développeurs LimeWire\u00a0:
 #### ABOUT_BIZDEV_BLURB=Behind the scenes business strategy and day-to-day affairs are handled by LimeWire's business developers:
-#? ABOUT_BIZDEV_BLURB=
+ABOUT_BIZDEV_BLURB=En arrière plan, la gestion des affaires courantes et des stratégies de développement est assurées par les ingénieurs d'affaires de LimeWire\u00a0:
 #### ABOUT_WEBDEV_BLURB=The LimeWire <a href="http://www.limewire.com/">web site</a> and LimeWire graphic design are the hard work of LimeWire's web team: 
-#? ABOUT_WEBDEV_BLURB=
+ABOUT_WEBDEV_BLURB=Le <a href="http://www.limewire.com/">site internet</a> de LimeWire, la mise en page et la charte graphique proviennent des travaux de l'équipe Internet de LimeWire\u00a0:
 #### ABOUT_SUPPORT_BLURB=LimeWire PRO questions are dutifully answered by LimeWire technical support:
-#? ABOUT_SUPPORT_BLURB=
+ABOUT_SUPPORT_BLURB=Les questions sur LimeWire PRO sont répondues comme il se doit par le support technique LimeWire\u00a0:
 #### ABOUT_PREVIOUS_DEV_BLURB=In addition, the following developers have worked on the LimeWire team in the past but have since moved on to other projects:
-#? ABOUT_PREVIOUS_DEV_BLURB=
+ABOUT_PREVIOUS_DEV_BLURB=De plus, les développeurs suivants ont travaillé dans le passé au sein de l'équipe LimeWire, mais se sont consacrés depuis à d'autres projets\u00a0:
 #### ABOUT_CONTRIBUTORS_BLURB=LimeWire open source contributors have provided significant code and many bug fixes, ideas, research, etc. to the project as well.  Those listed below have either written code that is distributed with every version of LimeWire, have identified serious bugs in the code, or both:
-#? ABOUT_CONTRIBUTORS_BLURB=
+ABOUT_CONTRIBUTORS_BLURB=Les contributeurs au projet de développement source ouvert ont également apporté au projet une part significative de code, nombre de corrections de d'anomalies, ainsi que leurs idées, recherches, etc... Ceux listés ci-dessous ont soit écrit du code aujourd'hui distribué dans chaque version de LimeWire, soit identifé des bogues sérieux dans le code, soit les deux\u00a0:
 #### ABOUT_I18N_BLURB=LimeWire would also like to thank the many contributors to the internationalization project, both for the application itself and for the LimeWire web site.
-#? ABOUT_I18N_BLURB=
+ABOUT_I18N_BLURB=LimeWire voudrait également remercier particulièrement les nombreux contributeurs au projet d'internationalisation, que ce soit pour l'application elle-même ou pour le site Internet de LimeWire.
 #### ABOUT_COMMUNITY_BLURB=Several colleagues in the Gnutella community merit special thanks.  These include:
-#? ABOUT_COMMUNITY_BLURB=
+ABOUT_COMMUNITY_BLURB=Certains collègues de la communauté Gnutella méritent un remerciement spécial. Ceux-ci incluent notamment\u00a0:
 #### ABOUT_CONCLUSION=Finally, LimeWire would like to extend its sincere thanks to these developers, users, and all others who have contributed their ideas to the project.  Without LimeWire users, the LimeWire network would not exist.
-#? ABOUT_CONCLUSION=
+ABOUT_CONCLUSION=Finalement, LimeWire voudrait étendre ses sincères remerciements à tous ces développeurs, utilisateurs, et autres personnes qui ont contribué leurs idées au projet. Sans les utilisateurs de LimeWire, le réseau LimeWire n'existerait pas.
  
 ###################################################################
 # Key/value pairs for the tip of the day window (not the tips themselves)
@@ -1188,7 +1188,7 @@ DOWNLOAD_AWAITING_SOURCES=En attente d'autres sources...
 # {2} the localized name of the "View" menu
 # {3} the localized name of the "Apply Skins" menu
 #### DOWNLOAD_EXPLAIN_HOW_TO_CHANGE_THEME=You have downloaded a skin titled "{0}", you can activate the new skin by clicking "{1}" in the "{2}"->"{3}" menu and then selecting it from the list of available skins.
-#? DOWNLOAD_EXPLAIN_HOW_TO_CHANGE_THEME=
+DOWNLOAD_EXPLAIN_HOW_TO_CHANGE_THEME=Vous venez de charger un nouveau thème intitulé "{0}", vous pouvez l'activer en cliquant "{1}" dans le menu "{2}"->"{3}", puis en le sélectionnant dans la liste des thèmes disponibles.
 #### DOWNLOAD_APPLY_NEW_THEME_START=You have downloaded a new skin titled "
 DOWNLOAD_APPLY_NEW_THEME_START=Vous avez téléchargé un nouveau thème intitulé "
 #### DOWNLOAD_APPLY_NEW_THEME_END=." Would you like to use this new skin?
@@ -1971,9 +1971,9 @@ UPDATE_NOW_LABEL=Mettre à jour maintenant
 #### UPDATE_TIP=Visit http://www.limewire.com to update!
 UPDATE_TIP=Visitez http://www.limewire.com pour mettre à jour\u00a0!
 #### UPDATE_RESTART=LimeWire needs to be restarted to install the update.  If you choose not to update now, LimeWire will update automatically when you close.  Would you like to update now?
-#? UPDATE_RESTART=
+UPDATE_RESTART=Limewire doit être redémarré pour installer la mise à jour. Si vous choisissez de ne pas mettre à jour maintenant, LimeWire le fera automatiquement lorsque vous le fermerez. Voulez-vous mettre à jour maintenant\u00a0?
 #### UPDATE_RESTART_TITLE=Update Ready
-#? UPDATE_RESTART_TITLE=
+UPDATE_RESTART_TITLE=Mise à jour prête
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
@@ -2542,11 +2542,11 @@ OPTIONS_DOWNLOAD_BANDWIDTH_SLIDER_LABEL_LABEL=Vitesse de chargement\u00a0:
 # in the options window
 ################################################################################
 #### OPTIONS_DOWNLOAD_LICENSE_WARNING_TITLE=Clear Downloads
-#? OPTIONS_DOWNLOAD_LICENSE_WARNING_TITLE=
+OPTIONS_DOWNLOAD_LICENSE_WARNING_TITLE=Effacer les chargements
 #### OPTIONS_DOWNLOAD_LICENSE_WARNING_LABEL=You can choose whether to be warned about downloading a file without a license.
-#? OPTIONS_DOWNLOAD_LICENSE_WARNING_LABEL=
+OPTIONS_DOWNLOAD_LICENSE_WARNING_LABEL=Vous pouvez choisir d'être alerté chaque fois que vous chargez un fichier dépourvu d'informations de licence.
 #### OPTIONS_DOWNLOAD_LICENSE_WARNING_CHECK_BOX_LABEL=Show License Warning:
-#? OPTIONS_DOWNLOAD_LICENSE_WARNING_CHECK_BOX_LABEL=
+OPTIONS_DOWNLOAD_LICENSE_WARNING_CHECK_BOX_LABEL=Afficher l'alerte de licence\u00a0:
 
 ################################################################################
 # Key/Value pairs for the options for automatically clearing uploads
@@ -4130,7 +4130,7 @@ ERROR_VENDOR_INVALID_PAYLOAD=Données invalides
 #### ERROR_VENDOR_UNRECOGNIZED=Unrecognized Vendor Message
 ERROR_VENDOR_UNRECOGNIZED=Message propriétaire inconnu
 #### ERROR_STARTUP_WINDOWS_COMPATIBILITY=LimeWire has encountered a problem during startup and cannot proceed.  You may be able to fix this problem by changing LimeWire's Windows Compatibility.  Right-click on the LimeWire icon on your Desktop and select 'Properties' from the popup menu.  Click the 'Compatibility' tab at the top, then click the 'Run this program in compatibility mode for' check box, and then select 'Windows 2000' in the box below the check box.  Then click the 'OK' button at the bottom and restart LimeWire.
-#? ERROR_STARTUP_WINDOWS_COMPATIBILITY=
+ERROR_STARTUP_WINDOWS_COMPATIBILITY=LimeWire a rencontré un problème durant le démarrage et ne peut pas continuer. Vous pouvez être en mesure de régler le problème en modifiant les options de Compatibilité Windows pour LimeWire. Faite un clic droit sur l'icône de LimeWire sur votre Bureau et sélectionnez l'option "Propriétés" dans le menu. Sélectionnez l'onglet "Compatibilité" en haut, puis coqchez la case "Exécuter ce programme en mode de compatibilité pour", et sélectionnez "Windows 2000" dans la boîte sous la case cochée. Cliquez le bouton "OK" en bas du dialogue et relancez LimeWire.
 
 ###############################################################################
 # Key/value pairs for general message labels
