--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -195,7 +195,7 @@ ABOUT_SCROLL_CHECK_BOX_LABEL=Avanzar automáticamente
 #### ABOUT_BUTTON_TIP=Close This Window
 ABOUT_BUTTON_TIP=Cerrar la ventana Acerca de.
 #### ABOUT_INTRODUCTION=Inspired by LimeWire's owner, Mark Gorton, the LimeWire project is a collaborative <a href="http://www.limewire.org/">open source effort</a> involving programmers and researchers from all over the world. The collaborative nature of Gnutella is also reflected in the Gnutella Developers Forum (GDF), of which LimeWire is a participant. The members of the GDF work in the trenches every day to make Gnutella a truly innovative collection of protocols that is constantly improving -- a testament to the power of open protocols and open standards.
-ABOUT_INTRODUCTION=Inspiradopor el creador de LimeWire, Mark Gorton, el Projecto LimeWire es un esfuerzo colaborativo de <a href="http://www.limewire.org/">Código Abierto</a> que envuelve programadores e investigadores de todas partes del mundo. La naturaleza colaborativa de Gnutella se ver reflajada tambien en el foro de desarrolladores Gnutella (GDF), en el cual LimeWire es un participante. Los miembros del GDF trabajan en las trincheras todos los días para hacer que Gnutella sea una colección innovadora de protocolos que siempre esta en constante mejoramiento -- un testamente del poder de los protocolos abiertos y de los estándares abiertos.
+ABOUT_INTRODUCTION=Inspiradopor el creador de LimeWire, Mark Gorton, el Projecto LimeWire es un esfuerzo colaborativo de <a href="http://www.limewire.org/">Código Abierto</a> que envuelve programadores e investigadores de todas partes del mundo. La naturaleza colaborativa de Gnutella se ver reflajada tambien en el foro de desarrolladores Gnutella (GDF), en el cual LimeWire es un participante. Los miembros del GDF trabajan en las trincheras todos los días para hacer que Gnutella sea una colección innovadora de protocolos que siempre esta en constante mejoramiento -- un testamento del poder de los protocolos abiertos y de los estándares abiertos.
 #### ABOUT_DEV_BLURB=LimeWire is also, of course, the result of the countless hours of work by LimeWire's developers:
 ABOUT_DEV_BLURB=LimeWire es tambien, por supuesto, el resultado de incontables horas de trabajo del equipo de desarrolladores de LimeWire:
 #### ABOUT_BIZDEV_BLURB=Behind the scenes business strategy and day-to-day affairs are handled by LimeWire's business developers:
@@ -205,9 +205,9 @@ ABOUT_WEBDEV_BLURB=El <a href="http://www.limewire.com">sitio web</a> de LimeWir
 #### ABOUT_SUPPORT_BLURB=LimeWire PRO questions are dutifully answered by LimeWire technical support:
 ABOUT_SUPPORT_BLURB=Las preguntas de LimeWIre PRO son contestadas de manera diligente por el equipo de soporte técnico de LimeWire:
 #### ABOUT_PREVIOUS_DEV_BLURB=In addition, the following developers have worked on the LimeWire team in the past but have since moved on to other projects:
-ABOUT_PREVIOUS_DEV_BLURB=En adición, los siguientes desarrolladores han trabajado en el equipo de LimeWire en el pasado pero desde ese entonces se han movido a otros proyectos:
+ABOUT_PREVIOUS_DEV_BLURB=En adición, los siguientes desarrolladores han trabajado en el equipo de LimeWire en el pasado pero desde ese entonces se han ido a otros proyectos:
 #### ABOUT_CONTRIBUTORS_BLURB=LimeWire open source contributors have provided significant code and many bug fixes, ideas, research, etc. to the project as well. Those listed below have either written code that is distributed with every version of LimeWire, have identified serious bugs in the code, or both:
-ABOUT_CONTRIBUTORS_BLURB=Los contribuyentes de codigo abierto en LimeWire, han provisto código significativo y muchas reparaciones de errores, ideas, investigacion, etc. al proyecto. Las personas listadas a continuación han escrito codigo que ha sido distribuido con cada version de LimeWire, o han indentificado errores serios en el código, o ambas cosas:
+ABOUT_CONTRIBUTORS_BLURB=Los contribuyentes de código abierto en LimeWire, han provisto código significativo y muchas reparaciones de errores, ideas, investigacion, etc. al proyecto. Las personas listadas a continuación han escrito código que ha sido distribuido con cada versión de LimeWire, o han indentificado errores serios en el código, o ambas cosas:
 #### ABOUT_I18N_BLURB=LimeWire would also like to thank the many contributors to the internationalization project, both for the application itself and for the LimeWire web site.
 ABOUT_I18N_BLURB=LimeWire tambien agradece a los muchos contribuyentes del proyecto de internacionalización, tanto para la aplicación como por el sitio web.
 #### ABOUT_COMMUNITY_BLURB=Several colleagues in the Gnutella community merit special thanks. These include:
@@ -996,7 +996,7 @@ SAVE_LOCATION_NOT_A_DIRECOTRY_ERROR=No se pudo colocar la carpeta de descargas c
 SAVE_LOCATION_SECURITY_VIOLATION_ERROR=No se pudo asignar la ubicación del archivo en {0}, el nombre del archivo es inválido y puede corromper su sistema.
 # {0} the full path name of the file
 #### SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=Could not set file location to {0}, because it is not a regular file.
-SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=No se pudo asignar la ubicacion del archivo en {0}, porque no es un archivo regular.
+SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=No se pudo asignar la ubicación del archivo en {0}, porque no es un archivo regular.
 #### SAVE_LOCATION_FILESYSTEM_ERROR=Could not set file location due to an error in the filesystem.
 SAVE_LOCATION_FILESYSTEM_ERROR=No se pudo asignar la ubicación del archivo debido a un error en el sistema de archivos.
 #### SAVE_LOCATION_ALREADY_DOWNLOADING_ERROR=The same file is already being downloaded.
