Fix illegal character and missing line separator

--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -1,4 +1,4 @@
-﻿################################################################################
+################################################################################
 # Messages Bundle for LimeWire 4.8.2
 # Specialization for: Dutch - Netherlands, Belgium
 # Thanks to: Willem Broekema, Edwin van Ouwerkerk Moria, Reinier Bergwerf, Jan Willem Lageman
@@ -3744,7 +3744,8 @@ STATS_LIME_SENT_BYTES_MULTICAST_MESSAGES_LABEL=Totale kilobytes verzonden namens
 #### STATS_LIME_SENT_BYTES_MULTICAST_PING_REQUESTS_TITLE=Pings
 STATS_LIME_SENT_BYTES_MULTICAST_PING_REQUESTS_TITLE=Pings
 #### STATS_LIME_SENT_BYTES_MULTICAST_PING_REQUESTS_LABEL=Kilobytes for Multicast pings sent from all Gnutella clients versus other LimeWires.
-STATS_LIME_SENT_BYTES_MULTICAST_PING_REQUESTS_LABEL=Kilobytes voor UDP-pings verzonden vanaf alle Gnutella-cliënten tegenover andere LimeWires. #### STATS_LIME_SENT_BYTES_MULTICAST_PING_REPLIES_TITLE=Pongs
+STATS_LIME_SENT_BYTES_MULTICAST_PING_REQUESTS_LABEL=Kilobytes voor UDP-pings verzonden vanaf alle Gnutella-cliënten tegenover andere LimeWires.
+#### STATS_LIME_SENT_BYTES_MULTICAST_PING_REPLIES_TITLE=Pongs
 STATS_LIME_SENT_BYTES_MULTICAST_PING_REPLIES_TITLE=Pongs
 #### STATS_LIME_SENT_BYTES_MULTICAST_PING_REPLIES_LABEL=Kilobytes for Multicast pongs sent from all Gnutella clients versus other LimeWires.
 STATS_LIME_SENT_BYTES_MULTICAST_PING_REPLIES_LABEL=Kilobytes voor Multicast-pongs verzonden vanaf alle cliënten van Gnutella tegenover andere LimeWires.
